# photokinetics

./: .gitignore  LICENSE  README.md  design_philosophy.md  zhihu_article.md  zhihu_article_draft.md
benchmarks/: fdtd_vs_photokinetics_benchmark.py
calculator/: photokinetics_calculator.html
docs/case_studies/: 01_photothermal_inversion.md  01_zhihu_final.md  02_zhihu_final.md
paper/: photokinetics_v2_1_preprint.md  photothermal_v1_preprint.md  pinn_ablation_T1x16.json  pinn_results_case4.json
photokinetics_pytorch/: __init__.py  constants.py  utils.py
photokinetics_pytorch/examples/: inverse_design_demo.py
photokinetics_pytorch/modules/: blackbody.py  compton.py  doppler.py  gravitational.py  nonlinear.py  photoelectric.py  photothermal.py  tweezer.py
pkg/photokinetics/: LICENSE  README.md  pyproject.toml
pkg/photokinetics/examples/: _common.py  _finite_difference.py  _pinn_nonuniform.py  baseline_pure_nn.py  baseline_uniform_scipy.py  benchmark_vs_scipy.py  design_optical_tweezer.py  fit_blackbody_temperature.py  fit_transient_photothermal.py  make_cover.py  make_zhihu_figures.py  make_zhihu_figures_case2.py  make_zhihu_figures_case4.py  pinn_ablation_small_T.py  pinn_inverse_kappa.py  test_pinn_nonuniform.py
pkg/photokinetics/photokinetics/: __init__.py  constants.py  utils.py
pkg/photokinetics/photokinetics/modules/: __init__.py  blackbody.py  compton.py  doppler.py  gravitational.py  nonlinear.py  photoelectric.py  photothermal.py  time_resolved.py  tweezer.py
pkg/photokinetics/tests/: test_all.py  test_blackbody_inversion.py  test_common.py  test_inverse_photothermal.py  test_time_resolved.py  test_time_resolved_accuracy.py  test_time_resolved_vs_fdtd.py  test_tweezer_design.py
scripts/: generate_photokinetics_v2_pdf.py  photokinetics_notebook.py
simulations/: compton_simulation.py  optics_simulation.py  photon_collision_simulation.py  photonic_kinetic_relationships.py
(+4 files in other folders)
